# practise_IU5-23_graphical-calculator

./: README.md
Desmo/: CMakeLists.txt  GraphWidget.cpp  GraphWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
Desmo/Desmos/: CMakeLists.txt
Desmo/Desmos/Degree/: Degree.cpp  Degree.h
Desmo/Desmos/Functions/: Functions.cpp  Functions.h
Desmo/Desmos/Hyperbolic/: Hyperbolic.cpp  Hyperbolic.h
Desmo/Desmos/Indct/: Indct.cpp  Indct.h
Desmo/Desmos/Irr/: Irr.cpp  Irr.h
Desmo/Desmos/Logo/: Logo.cpp  Logo.h
Desmo/Desmos/Trig/: Trig.cpp  Trig.h
Desmos/: main.cpp
Desmos/Degree/: Degree.cpp  Degree.h
Desmos/Functions/: Functions.cpp  Functions.h
Desmos/Indct/: Indct.cpp
Desmos/Irr/: Irr.cpp
Desmos/Logo/: Logo.cpp  Logo.h
Desmos/Trig/: Trig.cpp  Trig.h
